--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -15,6 +15,15 @@
   font-weight: normal;
 } */
 
+* {
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
 a,
 .green {
   text-decoration: none;
